# gstreamer-rs

./: Cargo.toml
gstreamer-transcoder/: Cargo.toml
gstreamer-transcoder/src/: lib.rs  transcoder_job.rs
