[package]
name = "gstreamer-transcoder"
version = "0.12.0"
authors = ["Thibault Saunier <tsaunier@igalia.com>"]
categories = ["multimedia", "transcoding"]
description = "Library to do Video transcoding based on GStreamer"
repository = "https://github.com/sdroege/gstreamer-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://gstreamer.freedesktop.org"
documentation = "https://sdroege.github.io/rustdoc/gstreamer/gstreamer_transcoder"
keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]

[dependencies]
bitflags = "1.0"
libc = "0.2"
glib = { git = "https://github.com/gtk-rs/glib" }
gstreamer = { path = "../gstreamer" }
gstreamer-base = { path = "../gstreamer-base" }

[build-dependencies.rustdoc-stripper]
version = "0.1"
optional = true

[badges]
travis-ci = { repository = "sdroege/gstreamer-rs", branch = "master" }
